--- a/Case-01/index.html
+++ b/Case-01/index.html
@@ -8,12 +8,16 @@
       *{
         margin: 0;
       }
-
-      body>section{
+      body{
+          overflow-x:hidden;
+          overflow-y: hidden;
+      }
+      .main-rec{
           width: 50vw;
           height: 50vh;
           position: absolute;
       }
+
       body>section:first-child{
           background: red;
       }
@@ -81,36 +85,81 @@
           margin: auto;
       }
 
+      .other-div>div{
+          width: 16vw;
+          aspect-ratio: 1/1;
+          background: white;
+          border-radius: 50%;
+          position: absolute;
+      }
+      .other-div>div:first-child{
+          left: -7vw;
+          top: -7vw;
+      }
+      .other-div>div:nth-child(2){
+          right: 0;
+          left: 0;
+          top: -7vw;
+          margin: auto;
+      }
+      .other-div>div:nth-child(3){
+          right: -7vw;
+          top: -7vw;
+      }
+      .other-div>div:nth-child(4){
+          bottom: -7vw;
+          right: -7vw;
+      }
+      .other-div>div:nth-child(5){
+          bottom: -7vw;
+          right: 0;
+          left: 0;
+          margin: auto;
+      }
+      .other-div>div:nth-child(6){
+          bottom: -7vw;
+          left: -7vw;
+      }
+
 
     </style>
 </head>
+
 <body>
-    <section>
+    <section class="main-rec">
         <div class="rec-center">
             <div></div>
         </div>
     </section>
-    <section>
+    <section class="main-rec">
         <div class="rec-center">
             <div></div>
         </div>
     </section>
-    <section>
+    <section class="main-rec">
         <div class="rec-center">
             <div></div>
         </div>
     </section>
-    <section>
+    <section class="main-rec">
         <div class="rec-center">
             <div></div>
         </div>
     </section>
-
-
 
     <div id="center-div">
         <div></div>
     </div>
+
+    <section class="other-div">
+        <div></div>
+        <div ></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </section>
+
 
 </body>
 </html>
